[package]
name = "ethers-signers"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
description = "A unified interface for locally signing Ethereum transactions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
ethers-core.workspace = true

# crypto
coins-bip32 = { branch = "main", git = "https://github.com/ArnoldTumukunde/coins.git" }
coins-bip39 = { branch = "main", git = "https://github.com/ArnoldTumukunde/coins.git" }
elliptic-curve.workspace = true
sha2.workspace = true
rand.workspace = true

# misc
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
hex.workspace = true

# futures
futures-util = { workspace = true, optional = true }
futures-executor = { workspace = true, optional = true }

# aws
rusoto_core = { version = "0.48.0", default-features = false, optional = true }
rusoto_kms = { version = "0.48.0", default-features = false, optional = true }
spki = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eth-keystore = {branch = "master", git = "https://github.com/ArnoldTumukunde/eth-keystore-rs.git"}
home = { workspace = true, optional = true }


hybrid-array = "0.2.0-rc.11"

# ledger
coins-ledger = { version = "0.10.1", default-features = false, optional = true }
semver = { workspace = true, optional = true }

# trezor
trezor-client = { version = "=0.1.3", default-features = false, features = [
    "ethereum",
], optional = true }

# yubi
yubihsm = { branch = "main", features = ["secp256k1", "http", "usb"], optional = true, git = "https://github.com/ArnoldTumukunde/yubihsm.rs.git" }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
yubihsm = { branch = "main", features = ["secp256k1", "usb", "mockhsm"], git ="https://github.com/ArnoldTumukunde/yubihsm.rs.git" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
futures = ["futures-util", "futures-executor"]

celo = ["ethers-core/celo"]
optimism = ["ethers-core/optimism"]

ledger = ["coins-ledger", "futures", "semver"]
trezor = ["trezor-client", "futures", "semver", "home"]
aws = ["rusoto_core/rustls", "rusoto_kms/rustls", "spki"]
yubi = ["yubihsm"]
